fix: checkbox alignment on macOS

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.mac-checkbox-size {
+  height: 16px;
+  width: 16px;
+}
